--- a/programing-m.css
+++ b/programing-m.css
@@ -3,6 +3,8 @@ div{
 border-radius: 20px;
 border-color: white;
 border-width: 5px;
+
+
 }
 div.container {
       
@@ -13,9 +15,13 @@ div.container div {
       width:29%;  
       float:left;
 margin-left: 30px;
+
+
+
 }
 div.container div:hover{
 opacity: 0.8;
+box-shadow: 0px 20px 5px white;
 
 }
 
@@ -36,11 +42,12 @@ button{
     display: flex;
     justify-content: center;
     align-items: center; 
-    margin-left: 100px;
     border-radius: 10px;
     border: none;
-    width: 100px;
+    width: 100%;
+    height: 20px;
     cursor: pointer;
+    
 }
 button:hover{
   background-color: rgb(248, 115, 228);
